refactor: 결제 금액 조회하도록 변경, 정적 팩토리 메서드 도입
정적 팩토리 메서드를 사용하도록 변경하고, 결제 수단이 DTO에서 사라짐에 따라 repository에서 총 결제 금액을 조회하는 것으로 변경했습니다.

Related to: #61